Expanded Cheat Menu:
### Changed:
- Examine:
- > Added a Skip Clear to the Object>Toggle funcs: Instead of removing info objs each time this will leave them.
- > Added to Context menu: Clipboard, Number Double/Halve, Boolean Toggle/To Table.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2,6 +2,8 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920001069,Toggle Boolean,
+302535920000664,Clipboard,
 302535920000741,Race,
 302535920001448,CSV,
 302535920001181,Used Terrain Textures,
@@ -17,7 +19,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920000484,Write console log to <color 100 255 100>%slogs/ConsoleLog.log</color> (updated every 5 seconds).,
 302535920001469,Image Viewer,
 302535920000971,Sites,
-302535920001476,Flags,
+302535920001476,Edit Flags,
 302535920001447,Shows list of flags set for selected object.,
 302535920000235,Attach Spots List,
 302535920001445,Shows list of attach spots for use with .ent files.,
@@ -115,7 +117,6 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000011,Missing Description,
 302535920001174,Show an example .mtl file for this material (not complete).,
 302535920001177,Generate .mtl,
-302535920001069,Toggle Boolean,
 302535920000497,Hook Started,
 302535920000498,Hook Stopped,
 302535920001068,"Readme:
@@ -297,6 +298,16 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001563,Set amount to <color 100 255 100>%s</color>.,
+302535920001564,Double Number,
+302535920001565,Halve Number,
+302535920001566,Copy ValueToLuaCode(value) to clipboard.,
+302535920001567,false to true and true to false.,
+302535920001568,Boolean To Table,
+302535920001569,Set the value to a new table: {}.,
+302535920001560,Skip Clear,
+302535920001561,Info objects will stay instead of being removed when activating a different option.,
+302535920001562,Selection Area,
 302535920001558,Toggle Objlist,
 302535920001559,Toggle setting the metatable for this table to an objlist (for using mark/delete all).,
 302535920001512,Mark All Objects (Line),
@@ -1593,7 +1604,6 @@ Warning: May instantly crash SM (not sure why).",
 302535920000322,Disabling this will remove most of the tooltips (not cheats menu/pane).,
 302535920001387,Toggle Signs,
 302535920001388,"Concrete, metal deposits, not working, etc...",
-302535920000664,Clipboard,
 302535920000665,If uploading a mod this copies mod steam id or uuid to clipboard.,
 302535920001364,Don't be an asshole to %s... Always ask permission before using other people's hard work.,
 302535920001365,HPK files will be unpacked into AppData/Mods/ModSteamId,
