Expanded Cheat Menu:
Code cleanup.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2,6 +2,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
+302535920000858,Index,
 302535920001069,Toggle Boolean,
 302535920000664,Clipboard,
 302535920000741,Race,
@@ -298,6 +299,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000870,Shows mod log msgs in an examine dialog.,
 302535920000692,Log is blank (well not anymore).,
 302535920000477,Clear out the windowed console log.,
+302535920001573,Spot Id,
 302535920001570,Fallback,
 302535920001563,Set amount to <color 100 255 100>%s</color>.,
 302535920001564,Double Number,
@@ -1088,7 +1090,6 @@ Sounds like a borked save; send me the file and I'll take a look",
 302535920000852,This will delete all <color 255 255 100>%s</color> of <color 255 150 150>%s</color>,
 302535920000856,"Yes, I want to delete all: <color 255 150 150>%s</color>",
 302535920000857,"No, I need to backup my save first (like I should've done before clicking something called ""Delete All"").",
-302535920000858,Index,
 302535920000859,Anim State,
 302535920000860,Set Anim State,
 302535920000861,Current State: <color 100 255 100>%s</color>,
