Expanded Cheat Menu:
Version bump.

### Added:
- Preliminary Xbox Support (thanks to Gnith for testing).
- > Certain stuff had to be disabled (the editor crashes the game, so no terrain editing).
- > Examine and console buttons don't work, and reading the file log probably is a no-go.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -116,6 +116,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000009,Missing Scenario Name,
 302535920000010,Missing Name,
 302535920000011,Missing Description,
+302535920001574,Crashes on XBOX!,
 302535920001571,"The way I test the CSV file means there might be some ""non-error"" errors added here.
 It's a tradeoff between erroneous errors and the game locking up.",
 302535920001174,Show an example .mtl file for this material (not complete).,
@@ -285,7 +286,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001308,Settings,
 302535920000734,Clear Log,
 302535920001026,Show File Log,
-302535920001091,Flushes log to disk and displays in an examine dialog.,
+302535920001091,Flushes log to disk and displays it.,
 302535920001152,Clear out the console log (F9 also works).,
 302535920001154,Displays the log text in a window you can copy sections from.,
 302535920000563,Copy Log Text,
