--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -260,6 +260,8 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001575,Show console log text when console is active (needs %s enabled).,
+302535920001576,Show Log When Console Active,
 302535920001123,Shows any mod msgs in the log.,
 302535920001102,Examine Errors,
 302535920001104,Open (some) errors in an examine dialog (shows stack trace and sometimes a thread).,
