--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,4 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
+302535920001578,Auto-Attach,
+302535920001579,Activate any auto-attach spots this entity has.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
