--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001577,Change different BetaBetaBeta properties (NDA workaround).,
+302535920001577,Change different BetaBetaBeta properties (NDA'd).,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -658,6 +658,12 @@ Use with %s to fill up a dome with spires.",
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
 See also %s.",
+302535920001580,Interrupt Supression Times,
+302535920001581,Sets story.time_created to -SuppressTime.,
+302535920001582,Testing Toggle,
+302535920001583,Toggles g_StoryBitTesting.,
+302535920001584,Testing Delete Backlog,
+302535920001585,Sets AccountStorage.StoryBitTimestamp to nil.,
 302535920001546,Random delay added (to keep game from lagging on large amounts).,
 302535920000902,"Anything with Repeatable in the tooltip will spawn more items on the map.
 Deep items will unlock the ability to exploit those resources.",
@@ -668,8 +674,8 @@ This will switch to a new map.",
 302535920001495,This tries to reverse the changes made when the tech is researched (emphasis on tries).,
 302535920001478,Open the Mod Editor and load the Mod map.,
 302535920001402,Add some party to your domes for 3 hours (10 domes max).,
-302535920001392,Clears story bit cooldowns... (got me).,
-302535920001393,StoryBits ClearCooldowns,
+302535920001392,Clears story bit cooldowns (sets story.cooldown_end to GameTime).,
+302535920001393,Clear Cooldowns,
 302535920001394,Spawn Planetary Anomalies,
 302535920001395,Adds Anomaly locations to Planetary View.,
 302535920000250,Default mapdata type,
