Expanded Cheat Menu:
- Research Tech All/Everything didn't work with "Everything" wink wink nudge nudge.
- Added all tech fields to Research Tech.

Mods:
- Updated startup mods.

Specialist By Experience v0.5:
Hopefully fixed the NonSpecialistPerformancePenalty issue (thanks Dunkelzahn).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -674,7 +674,7 @@ This will switch to a new map.",
 302535920001495,This tries to reverse the changes made when the tech is researched (emphasis on tries).,
 302535920001478,Open the Mod Editor and load the Mod map.,
 302535920001402,Add some party to your domes for 3 hours (10 domes max).,
-302535920001392,Clears story bit cooldowns (sets story.cooldown_end to GameTime).,
+302535920001392,Sets story.cooldown_end to GameTime.,
 302535920001393,Clear Cooldowns,
 302535920001394,Spawn Planetary Anomalies,
 302535920001395,Adds Anomaly locations to Planetary View.,
@@ -807,10 +807,6 @@ Best hope you picked India as your Mars sponsor...",
 302535920000307,All the tech/breakthroughs/mysteries,
 302535920000308,All Tech,
 302535920000309,All the regular tech,
-302535920000310,All Breakthroughs,
-302535920000311,All the breakthroughs,
-302535920000312,All Mysteries,
-302535920000313,All the mysteries,
 302535920000314,Researched,
 302535920000315,%s %s tech(s): Unleash your inner Black Monolith Mystery.,
 302535920000317,Select Unlock or Research then select the tech you want. Most mystery tech is locked to that mystery.,
