--- a/Mods ChoGGi/Specialist by Experience/changes.txt
+++ b/Mods ChoGGi/Specialist by Experience/changes.txt
@@ -1,6 +1,11 @@
+v0.5
+Hopefully fixed the NonSpecialistPerformancePenalty issue (thanks Dunkelzahn).
+
 v0.4
 Added ModConfig option to change how many Sols it takes.
+
 v0.3
 Da Vinci
+
 v0.2
 Error spamming in log if you have no workplaces.
