Expanded Cheat Menu:
- Examine>Object>Set Flags fix.

Spice Harvester v0.9:
Compatibility with Patriot Missile Defense System.

Rover Automated Mode v0.1:
Adds Automated Mode without unlocking the Rover Command AI tech.

Clear On Demolish v0.1:
If you have Decommission Protocol then this will clear any demolished buildings when you salvage them.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Spice Harvester/changes.txt
+++ b/Mods ChoGGi/Spice Harvester/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Compatibility with Patriot Missile Defense System.
+
 v0.8
 Fixed a bug from last update.
 Shuttles now randomly attack "worms" (suspicious looking rocks).
