Expanded Cheat Menu:
### Changed:
- Examine: Added value type to tooltip title.
- Updated the Monitor Threads/Tables funcs to use the auto-refresh delay of the examine dialog.
- rawget doesn't work like it should for users without HelperMod, so I disabled the "Attempt to use an undefined global" msg for them.
- > Otherwise ECM will spam the console log (it'll still print the msg, just not as an error).

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -312,7 +312,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920001563,Set amount to <color 100 255 100>%s</color>.,
 302535920001564,Double Number,
 302535920001565,Halve Number,
-302535920001566,Copy ValueToLuaCode(value) to clipboard.,
+302535920001566,Copy <color 100 255 100>ValueToLuaCode(value)</color> to clipboard.,
 302535920001567,false to true and true to false.,
 302535920001568,Boolean To Table,
 302535920001569,Set the value to a new table: {}.,
