Expanded Cheat Menu:
- Hid Auto-Attach in Entity Spawner when dealing with existing entity.

### Added:
- Console>Settings>Skip Undefined Globals: Stop the "Attempt to use an undefined global" msgs.

### Fixed:
- Debug>Pathing failed on jumper shuttles on the landing.
- Examine wasn't showing entity info it should be.
- Delete Object was spamming console when deleting a res pile.

Terraformer v1.4:
Made sure console log doesn't show up.

Change Default Apartment Model v0.1:
Make newly placed apartments use the "stairs" model.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 ID,Text,Translation,Old Translation,Gender
-302535920001577,Change different BetaBetaBeta properties (NDA'd).,
+302535920001577,Placeholder,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
@@ -130,7 +130,7 @@ It's a tradeoff between erroneous errors and the game locking up.",
 Attachment bspheres are off (x and y are; z and rotate aren't).
 Some of the file names are guesses. This also doesn't include any surf/surf_hash entries.",
 302535920001411,"ECM has been disabled.
-Use %s to enable it.
+Use <color 100 255 100>%s</color> to enable it.
 See the bottom of Gameplay>Controls if you've changed the shortcut.",
 302535920001383,AddXTemplate borked template name: %s template: %s list: %s,
 302535920000013,This shouldn't happen... Well dang something's bork bork bork.,
@@ -263,7 +263,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920001301,Edit Text,
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
-302535920001575,Show console log text when console is active (needs %s enabled).,
+302535920000310,Skip Undefined Globals,
+302535920000311,"Stop the ""<color 255 255 100>Attempt to use an undefined global</color>"" msgs.",
+302535920001575,Show console log text when console is active (needs <color 100 255 100>%s</color> enabled).,
 302535920001576,Show Log When Console Active,
 302535920001123,Shows any mod msgs in the log.,
 302535920001102,Examine Errors,
@@ -279,7 +281,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook",
 302535920000127,Various tools to use.,
 302535920001497,Show Blacklist,
 302535920001479,Errors In Console,
-302535920001480,Print (some) lua errors in the console (needs %s enabled).,
+302535920001480,Print (some) lua errors in the console (needs <color 100 255 100>%s</color> enabled).,
 302535920000853,Monitor,
 302535920001376,Auto Update List,
 302535920001377,Update this list when ECM updates it.,
@@ -411,7 +413,7 @@ Press once to clear this examine, again to clear all.",
 302535920001057,Data,
 302535920001239,Functions,
 302535920001240,Show all functions of this object and parents/ancestors.,
-302535920001001,ECM: Slight issue with %s you may safely ignore the following error or three.,
+302535920001001,ECM: Slight issue with <color 100 255 100>%s</color> you may safely ignore the following error or three.,
 302535920000520,Parents,
 302535920000525,Ancestors,
 302535920000553,Examine parent and ancestor objects.,
@@ -437,7 +439,7 @@ Which you can then mess around with some more in the console.",
 302535920000054,Any objects attached to this object.,
 302535920000070,"Shows list of attachments. This <color 100 255 100>%s</color> has <color 255 255 100>%s</color>.
 
-Press %s to hide green markers.",
+Press <color 100 255 100>%s</color> to hide green markers.",
 302535920001437,Reads file when you focus on the edit box (instead of pressing Read File).,
 302535920001438,Focus Update,
 302535920000471,External Editor,
@@ -653,7 +655,7 @@ Works on any building that produces.",
 302535920000225,Show hidden buildings in build menu.,
 302535920000226,Remove Spire Point Limit,
 302535920000227,"Build spires anywhere in domes.
-Use with %s to fill up a dome with spires.",
+Use with <color 100 255 100>%s</color> to fill up a dome with spires.",
 302535920000229,Buildings are built instantly.,
 302535920000230,Remove Building Limits,
 302535920000231,"Buildings can be placed almost anywhere (I left uneven terrain blocked, and pipes don't like domes).
@@ -762,7 +764,7 @@ Otherwise you won't see anything.",
 302535920000268,Start A Mystery,
 302535920000269,"Adding a mystery is cumulative, this will NOT replace existing mysteries.
 
-See Cheats>%s to remove.",
+See Cheats><color 100 255 100>%s</color> to remove.",
 302535920000270,Instant Start,
 302535920000271,"May take up to one Sol to ""instantly"" activate mystery.",
 302535920000272,"To play back speech press the ""<color 100 255 100>%s</color>"" checkbox and type in
@@ -1036,7 +1038,7 @@ Not permanent.",
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
 302535920001556,Use the selected object.,
 302535920001557,Display a story without sending a context object.,
-302535920001555,Choose a random %s to be the context for this storybit.,
+302535920001555,Choose a random <color 100 255 100>%s</color> to be the context for this storybit.,
 302535920001198,Show a list of terrain textures used in current map.,
 302535920001136,Test a CSV for malformed strings (can cause freezing when loaded normally).,
 302535920001137,CSV Path,
@@ -1426,7 +1428,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
 302535920000973,"Change the value (-1) to an index number from Terrain Textures.
-Open %s to see all the textures, the tooltips show the texture index.",
+Open <color 100 255 100>%s</color> to see all the textures, the tooltips show the texture index.",
 302535920001237,Terrain Type Remap,
 302535920001312,"Instead of replacing all textures with one then re-adding stuff, this will remap existing textures.",
 302535920001313,Amount used on map: %s,
