--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -101,6 +101,7 @@ ID,Text,Translation,Old Translation,Gender
 302535920001453,Completed,
 302535920000854,Results Found,
 302535920000109,Invalid Image,
+302535920000312,Make the building model look simpler (toggle).,
 302535920001543,Set collisions on <color 100 255 100>%s</color>. Collisions disabled: <color 255 255 100>%s</color>,
 302535920001541,Start a Crime Event,
 302535920001542,Renegades not required.,
