Expanded Cheat Menu:
- Looks like "lua_revision", LuaRevision, doesn't work anymore.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -151,7 +151,7 @@ See the bottom of Gameplay>Controls if you've changed the shortcut.",
 302535920000969,Collisions <color 255 255 100>%s</color> on <color 100 255 100>%s</color>,
 302535920000012,Error borked building: <color 255 150 150>%s</color>,
 302535920000015,Can't colour <color 255 150 150>%s</color>.,
-302535920000017,Use the colour picker (dbl right-click for instant change).,
+302535920000017,Use the colour picker (dbl right-click <right_click> for instant change).,
 302535920000018,"Don't use the colour picker: Numbers range from -128 to 127.
 If you want shiny metal: use 120 for Metallic and -128 for Roughness.",
 302535920000019,"Single colour for object (this colour will interact with the other colours).
@@ -192,7 +192,7 @@ You can copy and paste numbers if you want.",
 <color 100 255 100>s</color> = <color 255 255 100>SelectedObj</color>, <color 100 255 100>c()</color> = <color 255 255 100>GetTerrainCursor()</color>, <color 100 255 100>restart()</color> = <color 255 255 100>quit(""restart"")</color>",
 302535920001401,"Removed missing mod building from %s: %s, entity: %s, handle: %s",
 302535920001074,Ged Presets Editor,
-302535920000503,Right-click an item/submenu to add/remove it from the quickbar.,
+302535920000503,Right-click <right_click> an item/submenu to add/remove it from the quickbar.,
 302535920001465,Stop talking and start cheating!,
 302535920001466,"I know what I'm doing, show me the console log.",
 302535920001309,"Stop showing console log: Press Tilde or Enter and click the ""%s"" button then uncheck ""%s"".",
@@ -265,7 +265,9 @@ If this isn't a dumping site then waste rock will not be emptied.",
 302535920000721,Overwrite,
 302535920000827,Check this to overwrite file instead of appending to it.,
 302535920000310,Skip Undefined Globals,
-302535920000311,"Stop the ""<color 255 255 100>Attempt to use an undefined global</color>"" msgs.",
+302535920000311,"Stop the ""<color 255 255 100>Attempt to use an undefined global</color>"" msgs.
+
+The number is a count of stored msgs, right-click <right_click> to view the list."
 302535920001575,Show console log text when console is active (needs <color 100 255 100>%s</color> enabled).,
 302535920001576,Show Log When Console Active,
 302535920001123,Shows any mod msgs in the log.,
@@ -382,7 +384,7 @@ Decompiled code won't scroll correctly as the line numbers are different.",
 302535920001424,<left_click> Next <right_click> Previous <middle_click> Top,
 302535920001425,<left_click> Toggle <right_click> Set Delay,
 302535920001426,Various tools to use.,
-302535920001422,Right-click to change refresh delay.,
+302535920001422,Right-click <right_click> to change refresh delay.,
 302535920000967,Delay in ms between updating text.,
 302535920001248,Sort normally or backwards.,
 302535920001397,"Not the actual properties (see object.properties for those).
@@ -478,7 +480,7 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 302535920000085,"Auto-refresh list every ""Amount"".",
 302535920000086,Manually refresh the list.,
 302535920000087,Refresh delay in ms,
-302535920000088,Double right-click to open list of objects.,
+302535920000088,Double right-click <right_click> to open list of objects.,
 302535920000091,Auto-refresh list every second (turn off to edit values).,
 302535920000092,Updates list with any changed values.,
 302535920000095,New Entry,
@@ -781,7 +783,7 @@ g_Voice:Play(o.speech)",
 
 Sequence part may have more then one check, you may have to skip twice or more.
 
-Double right-click selected mystery to review past messages.",
+Double right-click <right_click> selected mystery to review past messages.",
 302535920000282,"This will remove the mystery, if you start it again; it'll be back to the start.",
 302535920000283,Remove All,
 302535920000284,This will remove all the mysteries!,
@@ -1494,7 +1496,7 @@ Some settings can't be changed in the editor, but you can manually add them in t
 302535920000988,Permanent,
 302535920000989,Make it stay at selected light model all the time (including reboots).,
 302535920000990,"Open this style in ""Change Light Model Custom"".",
-302535920000991,Double right-click to preview lightmodel without closing dialog.,
+302535920000991,Double right-click <right_click> to preview lightmodel without closing dialog.,
 302535920000993,Build menu,
 302535920000994,Console logging text,
 302535920000995,Infopanel (selection),
