Expanded Cheat Menu:
- Added ModMsgBlacklist to Console>Tools>Show Blacklist.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,6 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920000313,OnMsg/Msg blacklist,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
