Expanded Cheat Menu:
### Added:
- Cheats>Lightning Strike: Same as a strike from a dust storm.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,7 @@
 ID,Text,Translation,Old Translation,Gender
 302535920001577,Placeholder,
+302535920001587,Lightning Strike,
+302535920001588,Strike a random pos or at mouse cursor if using shortcut.,
 302535920001400,ChoGGi,
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
