Expanded Cheat Menu:
- Made sure every cheat pane action has a tooltip, and removed some redundant ones.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -101,6 +101,34 @@ ID,Text,Translation,Old Translation,Gender
 302535920001453,Completed,
 302535920000854,Results Found,
 302535920000109,Invalid Image,
+302535920001598,Reset shuttle control amount to default.,
+302535920001599,Show flight trajectories.,
+302535920001600,Instantly finish the training for all visitors.,
+302535920001601,Make the pool expand to the next radius.,
+302535920001602,Force add a new trade offer.,
+302535920001603,Reset the amount of reneagades this station can negate.,
+302535920001604,Remove this pool.,
+302535920001605,Shows a debug type view of the grid.,
+302535920001606,Max the <color green>%s</color> value for this colonist.,
+302535920001607,Set a random <color green>%s</color> for this colonist.,
+302535920001608,"I said if you're thinkin' of being my baby
+It don't matter if you're black or white
+
+I said if you're thinkin' of being my brother
+It don't matter if you're black or white",
+302535920001609,Turn this colonist into a renegade.,
+302535920001610,Remove the renegade trait from this colonist.,
+302535920001611,Reset the battery cap to default.,
+302535920001612,Drain the battery to zero.,
+302535920001613,Refill the battery to max.,
+302535920001614,Doubles the move speed.,
+302535920001615,Reset the move speed to default.,
+302535920001616,Spawn a firefly.,
+302535920001593,Spawns a dust devil nearby.,
+302535920001594,Lowers the electricity_consumption by 99%.,
+302535920001595,Something to do with CrystallineFrequencyJamming tech.,
+302535920001596,Lets you salvage the crystal.,
+302535920001597,Makes all crystals liftoff and head to the centre.,
 302535920000312,Make the building model look simpler (toggle).,
 302535920001543,Set collisions on <color green>%s</color>. Collisions disabled: <color yellow>%s</color>,
 302535920001541,Start a Crime Event,
