Expanded Cheat Menu:
- Code cleanup.



Mods:
- A couple random console requestes.

Store Building States:
Adds menus to buildings that will save/remove the state of that building (power,workshift,priority) in a profile.
You can switch profiles using the HUD button, and there's no limit on the amount of profiles or buildings in a profile.
Includes checkbox to add all buildings of the same type using the same state as the selected building.

ExpandedCheatMenu@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -196,7 +196,7 @@ You can copy and paste numbers if you want.",
 302535920000028,Find Resource,
 302535920000029,Error: Cannot find any <color red>%s</color>.,
 302535920000032,Select a resource to find,
-302535920001441,<left_click> Activate <right_click> Add/Remove Quickbar,
+302535920001441,<left_click> Activate MenuItem <right_click> Add/Remove Quickbar,
 302535920001439,"~obj, @func, @@type, $id, %img, ^str, *r/*g/*m threads. Hover mouse for more info.",
 302535920001440,"<color green>~</color><color yellow>obj</color> opens object in examine dlg, use <color red>ex(obj)</color> in lua code.
 <color green>~!</color><color yellow>obj</color> opens object's attachments in examine dlg.
